snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/error-0.1.1-20210823.130037-1.jar.sha1
ceeacb2497a1826a7c8dccbaa6dc5c1d6171f559